--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:generate": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:generate -f src/utils/ormconfig -d src/migrations -n",
     "migration:revert": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:revert -f src/utils/ormconfig",
+    "migration:run": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run -f src/utils/ormconfig",
     "schema:drop": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js schema:drop -f src/utils/ormconfig"
   },
   "dependencies": {
