--- a/packages/grpc/currency/package.json
+++ b/packages/grpc/currency/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.2",
+    "lodash": "^4.17.21",
     "pg": "^8.7.3",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
