--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.4.2",
     "@nestjs/jwt": "^7.1.0",
+    "@nestjs/microservices": "^8.4.6",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.4.2",
     "@nestjs/schedule": "^0.4.0",
