--- a/packages/grpc/currency/package.json
+++ b/packages/grpc/currency/package.json
@@ -16,7 +16,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "echo 'No e2e tests implemented yet.'"
+    "test:e2e": "echo 'No e2e tests implemented yet.'",
+    "migration:generate": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:create -f src/utils/ormconfig.ts -d src/migrations -n",
+    "migration:revert": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:revert -f src/utils/ormconfig",
+    "migration:run": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run -f src/utils/ormconfig",
+    "schema:drop": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js schema:drop -f src/utils/ormconfig",
+    "schema:sync": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js schema:sync -f src/utils/ormconfig.ts"
   },
   "dependencies": {
     "@grpc/grpc-js": "1.4.4",
